--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,18 @@ header {
     font-size: 31px;
     background-color: rgba(255, 255, 255, 0.5);
 }
+p {
+    margin: 0 30% 0 30%;
+    padding: 100px 30px 30px 30px;
+    display: grid;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    font-size: 25px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    font-weight: bold;
+    text-align: center;
+}
 form {
     margin: 0 30% 0 30%;
     padding: 100px 30px 30px 30px;
@@ -53,7 +65,7 @@ form #submit {
     font-weight: bold;
     transition: background-color .4s;
 }
-form #submit, form input, form select, form textarea{
+form #submit, form input, form select, form textarea {
     background: transparent;
 }
 form #submit:hover {
